# moneymanagerex.bak

mmex/: INSTALL.TXT  Makefile.in  README.RU  README.TXT  aclocal.m4  autoconf_inc.m4  bootstrap  bootstrap.bat  configure  configure.ac  mmex.aps  mmex.rc  mmex.sln  mmex.vcproj  mmex_tests.vcproj  mmexclient.vcproj  msgfmt.rules  sqlite3.vcproj
mmex/UnitTest++/: TestUnitTest++.vcproj  UnitTest++.sln  UnitTest++.vcproj  configure.ac
mmex/UnitTest++/src/: AssertException.d  Makefile.am  Test.d
mmex/auxd/: readme.txt
mmex/bakefile/: GNUmakefile  mmex.bkl
mmex/bakefile/presets/: wx_win32.bkl
mmex/bugtrap/: BugTrap.chm  BugTrap.h  BugTrap.lib  BugTrapU.lib
mmex/bugtrap-1.2/: BTAtlWindow.h  BTMfcWindow.h  BTTrace.h  BugTrapN.lib  ReadMe.txt
mmex/databases/: mmex0302.mmb
mmex/db/: uuid
mmex/doc/: contrib.txt  license.txt  version.txt
mmex/doc/doxgen/: doxyfile.dox
mmex/doc/help/: budget.html  custom_reports.html  custom_sql_reports.html  index.html  index_english.html  index_french.html  index_italian.html  index_polish.html  index_russian.html  index_spanish.html  investment.html  investment_polish.html  investment_russian.html  russian-help.html
mmex/docs/: russian-help.html
mmex/graphics/: MMEX_LOGO.pdn  illustration.eps  mmex_web_button.pdn
mmex/i18n/: Slovenian.po  bulgarian.po  chinese_chs.po  croatian.po  dutch.po  german.po  i18n.bkl  makefile.gcc  portuguese_portugal.po  romanian.po  russian.po  swedish.po
mmex/include/: SplitDetailDialog.h  Stackwalker.h  _wx_intellisense.h  aboutdialog.h  appstartdialog.h  assets.h  assetspanel.h  bddialog.h  billsdeposits.h  billsdepositspanel.h  budgetentrydialog.h  budgetingpanel.h  budgetyeardialog.h  budgetyearentrydialog.h  categdialog.h  chart.h  currencydialog.h  customsqldialog.h  dbwrapper.h  defs.h  fileviewerdialog.h  filtertransdialog.h  guiid.h  htmlbuilder.h  maincurrencydialog.h  mmaccount.h  mmcategory.h  mmcheckingpanel.h  mmcoredb.h  mmcurrency.h  mmdbinterface.h  mmex.h  mmgraphgenerator.h  mmgraphincexpensesmonth.h  mmgraphpie.h  mmgraphtopcategories.h  mmhelppanel.h  mmhomepagepanel.h  mmpanelbase.h  mmpayee.h  (+36 more)
mmex/include/awx/: led.h
mmex/include/wx/: wxSqlite3Macros.h  wxsqlite3.h  wxsqlite3def.h  wxsqlite3dyn.h  wxsqlite3opt.h
mmex/include/wx-1.7/: wxsqlite3.h  wxsqlite3dyn.h
mmex/include/wxsqlite3/: wxsqlite3def.h
mmex/include/wxsqlite3_secure/: wxsqlite3.h  wxsqlite3def.h  wxsqlite3dyn.h
mmex/install/: installa.iss  installu.iss
mmex/lib/: readme.txt  sqlite3.exp  sqlite3.lib
mmex/lib/UnitTest++/: Makefile
mmex/lib/cajun/: patch.diff
mmex/lib/sqlite/: readme.txt  sqlite3.def
mmex/lib/wx1_7/: sqlite3.exp
mmex/lib/wxsqlite/: Readme.txt
mmex/libs/: readme.txt
mmex/libs/sqlite/: codec.c  codec.h  readme.txt
mmex/libs/wxsqlite/: wxsqlite3.cpp
mmex/m4/: autoconf_inc.m4  readme.txt  wxpresets.m4
mmex/po/: GNUmakefile  Makefile.in  MoneyManagerEx.pot  Slovenian.po  ar.po  arabic.po  bg.po  bulgarian.po  chinese_chs.po  chinese_zh.po  croatian.po  cs.po  czech.po  de.po  dutch.po  dutch_be.po  el.po  en_GB.po  english-uk.po  english.po  es.po  fr.po  french.po  german.po  greek.po  he.po  hebrew.po  hr.po  hu.po  hungarian.po  id.po  indonesian.po  italian.po  latvian.po  lv.po  makefile.bcc  nl.po  no.po  norwegian.po  pl.po  (+28 more)
mmex/resources/: about.xpm  accountlist.xpm  accounttree.xpm  addaccount.xpm  addacctwiz.xpm  addbookm.xpm  appstart.xpm  assets.xpm  billsdeposits.xpm  bookmark.xpm  budgeting.xpm  calendar.xpm  car.xpm  categories.xpm  categoryedit.xpm  chartpiereport.xpm  checkupdate.xpm  clock.xpm  currency.xpm  currency_seed.csv  currency_seed.db3  customsql.xpm  delbookm.xpm  delete_account.xpm  downarrow.xpm  duplicate.xpm  edit_account.xpm  error.xpm  exefile.xpm  exit.xpm  export-import.xpm  facebook.xpm  filter.xpm  flag.xpm  help.xpm  homepage.xpm  homepagetree.xpm  house.xpm  issues.xpm  listview.xpm  (+46 more)
mmex/runtime/: Microsoft.VC80.CRT.manifest  contrib.txt  currency.db3  currency_seed.db3  license.txt  version.txt
mmex/runtime/en/: GNUmakefile  Makefile.in  Slovenian.mo  Slovenian.po  arabic.mo  arabic.po  brazilian.mo  brazilian.po  bulgarian.mo  bulgarian.po  chinese_chs.mo  chinese_chs.po  chinese_zh.mo  chinese_zh.po  croatian.mo  croatian.po  czech.mo  czech.po  dutch.mo  dutch.po  dutch_be.mo  dutch_be.po  english-uk.mo  english-uk.po  english.mo  english.po  french.mo  french.po  german.mo  german.po  greek.mo  greek.po  hebrew.mo  hebrew.po  hungarian.mo  hungarian.po  i18n.bkl  indonesian.mo  indonesian.po  italian.mo  (+34 more)
mmex/runtime/graphs/: date_line_chart.txt  inc_expenses_month.tmpl  inc_expenses_month.txt  pie_chart.tmpl  pie_chart.txt  top_categories.tmpl  top_categories.txt
mmex/runtime/help/: index.html  investment.html
mmex/runtime/languages/: brazilian-mmex.mo  brazilian-mmex.po  brazilian.mo  brazilian.po  chinese_chs.mo  chinese_chs.po  chinese_chs_mmex.mo  chinese_chs_mmex.po  chinese_simple_mmex.mo  chinese_simple_mmex.po  chinese_zh.mo  chinese_zh.po  chinese_zh_mmex.mo  chinese_zh_mmex.po  croatian.mo  croatian.po  czech-mmex.mo  czech-mmex.po  czech.mo  czech.po  dutch.po  english-mmex.mo  english-mmex.po  english.mo  (+30 more)
mmex/sql/: tables_v1.sql
mmex/sqlite/: readme.txt
mmex/src/: SplitDetailDialog.cpp  SplitTransactionDialog.cpp  Stackwalker.cpp  aboutdialog.cpp  aboutdialog.h  appstartdialog.cpp  appstartdialog.h  assetdialog.cpp  assetdialog.h  assets.cpp  assetspanel.cpp  assetspanel.h  bddialog.cpp  billsdeposits.cpp  billsdepositsdialog.cpp  billsdepositsdialog.h  billsdepositspanel.cpp  billsdepositspanel.h  budgetentrydialog.cpp  budgetentrydialog.h  budgetingpanel.cpp  budgetingpanel.h  budgetyeardialog.cpp  budgetyeardialog.h  budgetyearentrydialog.cpp  budgetyearentrydialog.h  categdialog.cpp  categdialog.h  chart.cpp  chart.h  constants.cpp  constants.h  currencydialog.cpp  currencydialog.h  customreportdialog.cpp  customreportdialog.h  customreportdisplay.cpp  customreportdisplay.h  customreportindex.cpp  customreportindex.h  (+145 more)
mmex/utils/: gen_mmex_db_view.bat  mmex.py  readme_mmex_db_view.txt
(+166 files in other folders)
