check_PROGRAMS = test
TESTS = $(check_PROGRAMS)

#test_LDADD = -lUnitTest++
test_LDADD = ../libUnitTest++.la

test_SOURCES = Main.cpp \
               TestChecks.cpp \
               TestTestList.cpp \
	       TestTimeConstraint.cpp \
	       RecordingReporter.h \
	       TestCurrentTest.cpp \
	       TestTestMacros.cpp \
	       TestTimeConstraintMacro.cpp \
	       ScopedCurrentTest.h \
	       TestDeferredTestReporter.cpp  \
	       TestTestResults.cpp  \
	       TestUnitTest++.cpp \
	       TestAssertHandler.cpp  \
	       TestMemoryOutStream.cpp \
	       TestTestRunner.cpp \
	       TestXmlTestReporter.cpp \
	       TestCheckMacros.cpp \
	       TestTest.cpp \
	       TestTestSuite.cpp
